--- a/HomeHelper/packages.config
+++ b/HomeHelper/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="OxyPlot.Metro" version="2012.5.2.1" targetFramework="win" />
   <package id="sqlite-net" version="1.0.5" targetFramework="win" />
   <package id="SQLitex64" version="1.0.66" targetFramework="win" />
+  <package id="StoreAppLib" version="1.1.0.3" targetFramework="win" />
+  <package id="winrtxamltoolkit" version="1.3.5.1" targetFramework="win" />
+  <package id="WinRTXamlToolkit.Controls.DataVisualization" version="1.3.5.1" targetFramework="win" />
 </packages>
