--- a/HomeHelper/HomeHelper.csproj
+++ b/HomeHelper/HomeHelper.csproj
@@ -201,11 +201,16 @@
     <Reference Include="StoreAppLib">
       <HintPath>..\packages\StoreAppLib.1.1.0.3\lib\NetCore45\StoreAppLib.dll</HintPath>
     </Reference>
-    <Reference Include="WinRTXamlToolkit">
-      <HintPath>..\packages\winrtxamltoolkit.1.3.5.1\lib\netcore45\WinRTXamlToolkit.dll</HintPath>
+    <Reference Include="WinRTXamlToolkit, Version=1.3.5.2, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\winrtxamltoolkit.1.3.5.2\lib\netcore45\WinRTXamlToolkit.dll</HintPath>
     </Reference>
-    <Reference Include="WinRTXamlToolkit.Controls.DataVisualization">
-      <HintPath>..\packages\WinRTXamlToolkit.Controls.DataVisualization.1.3.5.1\lib\netcore45\WinRTXamlToolkit.Controls.DataVisualization.dll</HintPath>
+    <Reference Include="WinRTXamlToolkit.Controls.DataVisualization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\WinRTXamlToolkit.Controls.DataVisualization.1.3.5.2\lib\netcore45\WinRTXamlToolkit.Controls.DataVisualization.dll</HintPath>
+    </Reference>
+    <Reference Include="WinRTXamlToolkit.Debugging">
+      <HintPath>..\packages\WinRTXamlToolkit.Debugging.1.3.5.2\lib\netcore45\WinRTXamlToolkit.Debugging.dll</HintPath>
     </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
