--- a/HomeHelper/packages.config
+++ b/HomeHelper/packages.config
@@ -4,6 +4,7 @@
   <package id="sqlite-net" version="1.0.5" targetFramework="win" />
   <package id="SQLitex64" version="1.0.66" targetFramework="win" />
   <package id="StoreAppLib" version="1.1.0.3" targetFramework="win" />
-  <package id="winrtxamltoolkit" version="1.3.5.1" targetFramework="win" />
-  <package id="WinRTXamlToolkit.Controls.DataVisualization" version="1.3.5.1" targetFramework="win" />
+  <package id="winrtxamltoolkit" version="1.3.5.2" targetFramework="win" />
+  <package id="WinRTXamlToolkit.Controls.DataVisualization" version="1.3.5.2" targetFramework="win" />
+  <package id="WinRTXamlToolkit.Debugging" version="1.3.5.2" targetFramework="win" />
 </packages>
