--- a/HomeHelper/HomeHelper.csproj
+++ b/HomeHelper/HomeHelper.csproj
@@ -125,6 +125,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\AlertaUtilitate.cs" />
     <Compile Include="Model\ConsumUtilitate.cs" />
     <Compile Include="Model\Utilitati.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
