--- a/HomeHelper/HomeHelper.csproj
+++ b/HomeHelper/HomeHelper.csproj
@@ -113,6 +113,9 @@
     <Compile Include="Common\LayoutAwarePage.cs" />
     <Compile Include="Common\RichTextColumns.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
+    <Compile Include="Controls\AlertaUtilitateUserControl.xaml.cs">
+      <DependentUpon>AlertaUtilitateUserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\EditConsumUtilitateUserControl.xaml.cs">
       <DependentUpon>EditConsumUtilitateUserControl.xaml</DependentUpon>
     </Compile>
@@ -167,6 +170,10 @@
     <Page Include="Common\StandardStyles.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\AlertaUtilitateUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\EditConsumUtilitateUserControl.xaml">
       <SubType>Designer</SubType>
