--- a/HomeHelper/HomeHelper.csproj
+++ b/HomeHelper/HomeHelper.csproj
@@ -213,8 +213,9 @@
     </SDKReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="StoreAppLib">
-      <HintPath>..\packages\StoreAppLib.1.1.0.3\lib\NetCore45\StoreAppLib.dll</HintPath>
+    <Reference Include="StoreAppLib, Version=1.1.2.0, Culture=neutral, PublicKeyToken=f3cd13981968e4ee, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\StoreAppLib.1.1.2.0\lib\NetCore45\StoreAppLib.dll</HintPath>
     </Reference>
     <Reference Include="WinRTXamlToolkit, Version=1.3.5.2, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
