--- a/HomeHelper/packages.config
+++ b/HomeHelper/packages.config
@@ -5,6 +5,9 @@
   <package id="SQLitex64" version="1.0.66" targetFramework="win" />
   <package id="StoreAppLib" version="1.1.2.0" targetFramework="win" />
   <package id="winrtxamltoolkit" version="1.3.8.0" targetFramework="win" />
+  <package id="winrtxamltoolkit" version="1.4.2.0" targetFramework="win" />
   <package id="WinRTXamlToolkit.Controls.DataVisualization" version="1.3.8.0" targetFramework="win" />
+  <package id="WinRTXamlToolkit.Controls.DataVisualization" version="1.4.2.0" targetFramework="win" />
   <package id="WinRTXamlToolkit.Debugging" version="1.3.8.0" targetFramework="win" />
+  <package id="WinRTXamlToolkit.Debugging" version="1.4.2.0" targetFramework="win" />
 </packages>
