Facut traducerea pe limba engleza si rezolvat conflictele.

--- a/HomeHelper/HomeHelper.csproj
+++ b/HomeHelper/HomeHelper.csproj
@@ -151,6 +151,7 @@
     </AppxManifest>
     <None Include="HomeHelper_TemporaryKey.pfx" />
     <None Include="packages.config" />
+    <PRIResource Include="Strings\en\Resources.resw" />
     <PRIResource Include="Strings\ro-ro\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
