--- a/HomeHelperPhone/HomeHelperPhone.csproj
+++ b/HomeHelperPhone/HomeHelperPhone.csproj
@@ -155,6 +155,9 @@
     <Compile Include="SQLiteAsync.cs" />
     <Compile Include="Utils\PhoneResources.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="Views\EditViewAlertaUtilitate.xaml.cs">
+      <DependentUpon>EditViewAlertaUtilitate.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\EditViewConsumUtilitate.xaml.cs">
       <DependentUpon>EditViewConsumUtilitate.xaml</DependentUpon>
     </Compile>
@@ -172,6 +175,10 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\EditViewAlertaUtilitate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
