--- a/HomeHelperPhone/HomeHelperPhone.csproj
+++ b/HomeHelperPhone/HomeHelperPhone.csproj
@@ -86,7 +86,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>Bin\ARM\Release</OutputPath>
-    <DefineConstants>TRACE;SILVERLIGHT;WINDOWS_PHONE</DefineConstants>
+    <DefineConstants>TRACE;SILVERLIGHT;WINDOWS_PHONE;USE_WP8_NATIVE_SQLITE;WP8</DefineConstants>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
@@ -211,6 +211,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <None Include="HomeHelperPhone_2014_09_20_10_16_16.sap" />
+    <None Include="HomeHelperPhone_2014_09_20_10_17_49.sap" />
     <None Include="packages.config" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml">
